feat: firebase UI auth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CapstoneProject</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="send_button_label">Send</string>
 </resources>
