--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">CapstoneProject</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
+    <string name="gps">GPS</string>
+    <string name="need_location_permission_message">need location permission</string>
+    <string name="top_places">Top Places</string>
+    <string name="api_key_message">Please insert your API KEY from triposo.com into gradle.properties</string>
 </resources>
