--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="search_city">Search City</string>
     <string name="search">Search</string>
     <string name="search_here">Search Here</string>
+    <string name="test">test</string>
 </resources>
