feat: add / remove to db on FAB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="creating_new_database_instance">Creating new database instance</string>
     <string name="getting_database_instance">Getting the database instance</string>
     <string name="retrieving_recipes_from_db">Actively retrieving recipes from the DataBase</string>
-    <string name="widget_removed">Widget Removed</string>
-    <string name="add_to_widget">Add to Widget</string>
+    <string name="city_removed_from_db">Removed from favourite widget</string>
+    <string name="add_city_to_db">Add to favourite and to widget</string>
 </resources>
