--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CapstoneProject</string>
+    <string name="app_name">AppCity</string>
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
     <string name="gps">GPS</string>
@@ -22,4 +22,5 @@
     <string name="appwidget_text">CityChecker</string>
     <string name="favourites_city">Favourites City</string>
     <string name="title_activity_favourites_city">FavouritesCityActivity</string>
+    <string name="up">up</string>
 </resources>
