--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="favourites_city">Favourites City</string>
     <string name="title_activity_favourites_city">FavouritesCityActivity</string>
     <string name="up">up</string>
+    <string name="no_fav_city_text">There is no City liked</string>
 </resources>
