--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_activity_favourites_city">FavouritesCityActivity</string>
     <string name="up">up</string>
     <string name="no_fav_city_text">There is no City liked</string>
+    <string name="contain_only_words">Please insert only words</string>
 </resources>
