--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="up">up</string>
     <string name="no_fav_city_text">There is no City liked</string>
     <string name="contain_only_words">Please insert only words</string>
+    <string name="couldnt_find_city">Sorry, we couldn\'t find any results</string>
 </resources>
