--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="favourites_city">Favourites City</string>
     <string name="title_activity_favourites_city">FavouritesCityActivity</string>
     <string name="up">up</string>
-    <string name="no_fav_city_text">There is no City liked</string>
+    <string name="no_fav_city_text">There is no liked city</string>
     <string name="contain_only_words">Please insert only words</string>
     <string name="couldnt_find_city">Sorry, we couldn\'t find any results</string>
     <string name="image_transition">imageTransition</string>
